--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Hero Section -->
     <section id="hero">
       <div class="container hero-content">
-        <img src="/assest/profile.jpg" alt="Profile" class="hero-img" />
+        <img src="assest/profile.jpg" alt="Profile" class="hero-img" />
         <h1 class="hero-title">Jahida Khanom Jinar</h1>
         <h2 class="hero-subtitle">Full Stack Developer</h2>
         <p class="hero-text">
@@ -448,3 +448,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
