--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="social-links">
-        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/JahidaJinar" class="social-link"><i class="fab fa-github"></i></a>
         <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
         <a href="#" class="social-link"><i class="fab fa-dribbble"></i></a>
@@ -448,4 +448,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
