--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Hero Section -->
     <section id="hero">
       <div class="container hero-content">
-        <img src="assest/profile.jpg" alt="Profile" class="hero-img" />
+        <img src="/assest/profile.jpg" alt="Profile" class="hero-img" />
         <h1 class="hero-title">Jahida Khanom Jinar</h1>
         <h2 class="hero-subtitle">Full Stack Developer</h2>
         <p class="hero-text">
@@ -47,7 +47,14 @@
           modern technologies. Passionate about solving problems and creating
           intuitive user experiences.
         </p>
-        <a href="#contact" class="btn">Get In Touch</a>
+        <div class="hero-buttons">
+          <a href="#contact" class="btn btn-primary">
+            <i class="fas fa-envelope"></i> Get In Touch
+          </a>
+          <a href="/assest/Jinar CV.pdf" download class="btn btn-secondary">
+            <i class="fas fa-download"></i> Download CV
+          </a>
+        </div>
       </div>
     </section>
 
@@ -63,9 +70,7 @@
               and Engineering. When I'm not coding, I enjoy drawing and
               painting.
             </p>
-            <p>
-              You can also visit my page on 👇
-            </p>
+            <p>You can also visit my page on 👇</p>
             <div class="social-links">
               <a href="https://www.facebook.com/share/1EDu5V9Smg/"
                 ><i class="fa-brands fa-facebook"></i
@@ -438,7 +443,7 @@
     <footer class="footer">
       <div class="social-links">
         <a href="https://github.com/JahidaJinar" class="social-link"><i class="fab fa-github"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/in/jahida-khanom-jinar-20b7082b7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link"><i class="fab fa-linkedin-in"></i></a>
         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
         <a href="#" class="social-link"><i class="fab fa-dribbble"></i></a>
       </div>
@@ -448,5 +453,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-
