Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Hero Section -->
     <section id="hero">
       <div class="container hero-content">
-        <img src="/assest/profile.jpg" alt="Profile" class="hero-img" />
+        <img src="assest/profile.jpg" alt="Profile" class="hero-img" />
         <h1 class="hero-title">Jahida Khanom Jinar</h1>
         <h2 class="hero-subtitle">Full Stack Developer</h2>
         <p class="hero-text">
@@ -51,7 +51,7 @@
           <a href="#contact" class="btn btn-primary">
             <i class="fas fa-envelope"></i> Get In Touch
           </a>
-          <a href="/assest/Jinar CV.pdf" download class="btn btn-secondary">
+          <a href="assest/Jinar CV.pdf" download class="btn btn-secondary">
             <i class="fas fa-download"></i> Download CV
           </a>
         </div>
@@ -453,3 +453,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
